GG-404 External type construction and validation.